--- a/templated/hotf.html
+++ b/templated/hotf.html
@@ -24,11 +24,11 @@
 		<div id="wrapper">
 					<section id="intro" class="main">
 						<span class="fa fa-globe fa-spin fa-5x"></span>
-						<h2>Hi There!</h2>
-						<p>I'm Jared, a Dallas high school student with a love for stage & film, games, and procedural generation.</p>
-						<ul class="actions">
+						<h2>HOTF</h2>
+						<p>Stuff here.</p>
+						<!-- <ul class="actions">
 							<li><a href="#" class="button big">More About Me</a></li>
-						</ul>
+						</ul> -->
 					</section>
       
       				<!-- Footer -->
