--- a/templated/game.html
+++ b/templated/game.html
@@ -23,7 +23,7 @@
 		<!-- Main -->
 		<div id="wrapper">
 					<section id="intro" class="main">
-						<span class="fa fa-globe fa-spin fa-5x"></span>
+						<span class="icon fa-gamepad major"></span>
 						<h2>HOTF</h2>
 						<p>Stuff here.</p>
 						<!-- <ul class="actions">
