Adding wix to tools list

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                         <li class="list-inline-item">
                             <i class="fas fa-database"></i>
                         </li>
+                        <li class="list-inline-item">
+                            <i class="fab fa-wix"></i>
+                        </li>
                     </ul>
 
                     <div class="subheading mb-3">Operating Systems</div>
