testing mobile responsive setting

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                 slidesToScroll: 1,
                 arrows: false,
                 fade: true,
+                mobileFirst: true,
                 asNavFor: '.projcarousel'
             });
             $('.projcarousel').slick({
