Adding new profile and TabSections project

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Jared Butler</span>
                 <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/newprofile.jpg" alt="">
                 </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -103,7 +103,7 @@
                         </div>
                         <figcaption class="text-center">My implementation of 'Game of Life' in JS using a matrix of text characters, with a few extra features.</figcaption>
                     </figure>
-                    <p>After a summer of researching and writing web content about Texas Family Law for a local law office, and a senior year where I spent every Wednesday tutoring underpriveleged students in West Dallas, I came to recognize my passion for presenting facts and educating others, and how it could compliment my preexisting passions for design and procedural algorithms. As such, when I came to Georgia Tech I chose concentrations in People (relating to HCI, Psychology, and infoviz) and Media. I also joined the editorial board of <a href="http://northavereview.com/">North Avenue Review</a> magazine (an editorial magazine on campus), where I now manage its website and public presence! I still try to find time to make more little web experiments here and there in my spare time, though...</p>
+                    <p>After a summer of researching and writing web content about Texas Family Law for a local law office, and a senior year where I spent every Wednesday tutoring underpriveleged students in West Dallas, I came to recognize my passion for presenting facts and educating others, and how it could compliment my preexisting passions for design and procedural algorithms. As such, when I came to Georgia Tech I chose concentrations in People (relating to HCI, Psychology, and infoviz) and Media. I also joined the editorial board of <a href="http://northavereview.com/">North Avenue Review</a> magazine (an editorial magazine on campus), where I now manage its website and public presence! Finally, last Spring I was elected to GT's Undergraduate House of Representatives to represent the College of Computing, which has been an incredible blessing! I've spent the last few semesters getting to meet dozens of faculty and student leaders across campus, and to work with them on a whole range of important projects such as elections, budgets, and a new manual for student organizations (and soon I'm going to be helping redesign Course Critique, our grade-reporting website!). I still try to find time to make more little web experiments here and there in my spare time, though...</p>
                 </div>
             </section>
 
@@ -173,11 +173,11 @@
                             <p class="projinfo"><span class="infolead">Pictured below:</span> The original CSS template I made for my website way back in 2014. I have no idea what I was thinking...</p>
                         </div>
                         <div>
-                            <h3 class="projtitle">AcademySS</h3>
-                            <p class="projdescrip">A personal project in the early stages of development for formatting research papers for display online  as HTML. I hope to integrate it with, and offer formatting resources for, data-visualization libraries like D3.js.</p>
-                            <p class="projinfo"><span class="infolead">Languages:</span> HTML, CSS</p>
-                            <p class="projinfo"><span class="infolead">Libraries/Tools:</span> D3.js</p>
-                            <p class="projinfo"><span class="infolead">Pictured below:</span> Some early renderings of header formatting.</p>
+                            <h3 class="projtitle">TabSections</h3>
+                            <p class="projdescrip">An in-progress Chrome Extension for organizing tabs that allows the user to create manipulatable partitions between groups of tabs in their browser.</p>
+                            <p class="projinfo"><span class="infolead">Languages:</span> JSON, JS, HTML</p>
+                            <p class="projinfo"><span class="infolead">Libraries/Tools:</span> Chrome Tabs API, NPM, chrome-extension-async</p>
+                            <p class="projinfo"><span class="infolead">Pictured below:</span> An example of a series of tabs split into sections using the extension!</p>
                         </div>
                         <div>
                             <h3 class="projtitle">TMB (Barcelona Metro System App)</h3>
@@ -200,7 +200,7 @@
                             <img alt="An image of my old website." src="img/oldsite.jpg">
                         </div>
                         <div>
-                            <img alt="A sample of AcademySS's format." src="img/academyss.jpg">
+                            <img alt="A sample of AcademySS's format." src="img/tabsections.jpg">
                         </div>
                         <div>
                             <img alt="The 'leave reviews' page of the TMB app." src="img/tmb.jpg">
