--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="subheading mb-5">Design Enthusiast · STE<span class="text-primary">A</span>M Fanatic · JS Experimenter ·
                         <a href="mailto:jaredbtlr@gatech.edu">jaredbtlr@gatech.edu</a>
                     </div>
-                    <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! I'm also currently seeking an internship for the summer of 2020, so read on to learn a little bit more about my skills and interests!</p>
+                    <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! <b>I'm currently interning in IT App Development at Reinsurance Group of America</b>, but if you're interested in recruiting me for the Fall, Spring, or next Summer, read on to learn a little bit more about my skills and interests!</p>
 
                     <div class="social-icons">
                         <a class="icontrans" href="https://www.linkedin.com/in/jbtlr/">
@@ -77,7 +77,7 @@
                         <a class="icontrans" href="mailto:jaredbtlr@gatech.edu">
                             <i class="fas fa-envelope fa-lg"></i>
                         </a>
-                        <a class="icontrans" href="files/ResumeF19.docx">
+                        <a class="icontrans" href="files/ResumeSM20.docx">
                             <i class="fas fa-file-invoice fa-lg"></i>
                         </a>
                     </div>
@@ -154,7 +154,7 @@
                         </li>
                     </ul>
 
-                    <div class="subheading mb-3"><a href="files/ResumeF19.docx">Full Resume</a></div>
+                    <div class="subheading mb-3"><a href="files/ResumeSM2020.docx">Full Resume</a></div>
 
                 </div>
             </section>
