fixing resume link, assorted skill changes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="subheading mb-5">Design Enthusiast · STE<span class="text-primary">A</span>M Fanatic · JS Experimenter ·
                         <a href="mailto:jaredbtlr@gatech.edu">jaredbtlr@gatech.edu</a>
                     </div>
-                    <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! <b>I'm currently interning in IT App Development at Reinsurance Group of America</b>, but if you're interested in recruiting me for the Fall, Spring, or next Summer, read on to learn a little bit more about my skills and interests!</p>
+                    <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! <b>I'm currently interning part-time in Global IT at Reinsurance Group of America</b>, but if you're interested in recruiting me for the Summer of 2021, read on to learn a little bit more about my skills and interests!</p>
 
                     <div class="social-icons">
                         <a class="icontrans" href="https://www.linkedin.com/in/jbtlr/">
@@ -127,9 +127,9 @@
                         <li class="list-inline-item">
                             <i class="fab fa-java"></i>
                         </li>
-                        <li class="list-inline-item">
+                        <!--<li class="list-inline-item">
                             <i class="fab fa-google-drive"></i>
-                        </li>
+                        </li>-->
                         <li class="list-inline-item">
                             <i class="fab fa-git"></i>
                         </li>
@@ -140,7 +140,10 @@
                             <i class="fas fa-database"></i>
                         </li>
                         <li class="list-inline-item">
-                            <i class="fab fa-wix"></i>
+                            <i class="fab fa-react"></i>
+                        </li>
+                        <li class="list-inline-item">
+                            <i class="fab fa-node"></i>
                         </li>
                     </ul>
 
@@ -154,7 +157,7 @@
                         </li>
                     </ul>
 
-                    <div class="subheading mb-3"><a href="files/ResumeSM2020.docx">Full Resume</a></div>
+                    <div class="subheading mb-3"><a href="files/ResumeSM20.docx">Full Resume</a></div>
 
                 </div>
             </section>
@@ -188,9 +191,9 @@
                         </div>
                         <div>
                             <h3 class="projtitle">NAR Website</h3>
-                            <p class="projdescrip">The website I manage for North Avenue Review Magazine. While the old version was based off a hand-built backend and written in Ruby Sinatra, the current system I am in the process of moving to is based off the Wix platform.</p>
+                            <p class="projdescrip">The website I manage for North Avenue Review Magazine. The website is built with Ruby Sinatra and ferries form submissions to Mailchimp and Amazon S3 storage.</p>
                             <p class="projinfo"><span class="infolead">Languages:</span> HTML, Ruby</p>
-                            <p class="projinfo"><span class="infolead">Libraries/Tools:</span> Sinatra, MailChimp, Wix</p>
+                            <p class="projinfo"><span class="infolead">Libraries/Tools:</span> Sinatra, MailChimp, Amazon S3</p>
                             <p class="projinfo"><span class="infolead">Pictured below:</span> The finalized front page for the new version of the website!</p>
                         </div>
                     </div>
