updating bio and NAR work

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="subheading mb-5">Design Enthusiast · STE<span class="text-primary">A</span>M Fanatic · JS Experimenter ·
                         <a href="mailto:jaredbtlr@gatech.edu">jaredbtlr@gatech.edu</a>
                     </div>
-                    <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! <b>I'm currently interning part-time in Global IT at Reinsurance Group of America</b>, but if you're interested in recruiting me for the Summer of 2021, read on to learn a little bit more about my skills and interests!</p>
+                    <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! I  f you're interested in recruiting me for the Summer of 2021, read on to learn a little bit more about my skills and interests!</p>
 
                     <div class="social-icons">
                         <a class="icontrans" href="https://www.linkedin.com/in/jbtlr/">
@@ -103,7 +103,7 @@
                         </div>
                         <figcaption class="text-center">My implementation of 'Game of Life' in JS using a matrix of text characters, with a few extra features.</figcaption>
                     </figure>
-                    <p>After a summer of researching and writing web content about Texas Family Law for a local law office, and a senior year where I spent every Wednesday tutoring underpriveleged students in West Dallas, I came to recognize my passion for presenting facts and educating others, and how it could compliment my preexisting passions for design and procedural algorithms. As such, when I came to Georgia Tech I chose concentrations in People (relating to HCI, Psychology, and infoviz) and Media. I also joined the editorial board of <a href="http://northavereview.com/">North Avenue Review</a> magazine (an editorial magazine on campus), where I now manage its website and public presence! Finally, last Spring I was elected to GT's Undergraduate House of Representatives to represent the College of Computing, which has been an incredible blessing! I've spent the last few semesters getting to meet dozens of faculty and student leaders across campus, and to work with them on a whole range of important projects such as elections, budgets, and a new manual for student organizations (and soon I'm going to be helping redesign Course Critique, our grade-reporting website!). I still try to find time to make more little web experiments here and there in my spare time, though...</p>
+                    <p>After a summer of researching and writing web content about Texas Family Law for a local law office, and a senior year where I spent every Wednesday tutoring underpriveleged students in West Dallas, I came to recognize my passion for presenting facts and educating others, and how it could compliment my preexisting passions for design and procedural algorithms. As such, when I came to Georgia Tech I chose concentrations in People (relating to HCI, Psychology, and infoviz) and Media. I also joined the editorial board of <a href="http://northavereview.com/">North Avenue Review</a> magazine (an editorial magazine on campus), where I now manage its website and public presence as Editor-in-Chief! I've also served Student Government (SGA) as the College of Computing representative to the undergrad legislature since the end of my freshman year, which has been an incredible blessing! I've spent the last few semesters getting to meet dozens of faculty and student leaders across campus, and to work with them on a whole range of important projects such as elections, budgets, and a new manual for student organizations. I'm now a member of SGA's IT Board, where I'm helping redesign Course Critique, our grade-reporting website! I still try to find time to make more little web experiments here and there in my spare time, though...</p>
                 </div>
             </section>
 
@@ -193,8 +193,8 @@
                             <h3 class="projtitle">NAR Website</h3>
                             <p class="projdescrip">The website I manage for North Avenue Review Magazine. The website is built with Ruby Sinatra and ferries form submissions to Mailchimp and Amazon S3 storage.</p>
                             <p class="projinfo"><span class="infolead">Languages:</span> HTML, Ruby</p>
-                            <p class="projinfo"><span class="infolead">Libraries/Tools:</span> Sinatra, MailChimp, Amazon S3</p>
-                            <p class="projinfo"><span class="infolead">Pictured below:</span> The finalized front page for the new version of the website!</p>
+                            <p class="projinfo"><span class="infolead">Libraries/Tools:</span> Sinatra, MailChimp, Amazon S3, Bootstrap</p>
+                            <p class="projinfo"><span class="infolead">Pictured below:</span> The preview page for NAR's Quaranzine, our first-ever online issue themed around Web 1.0, Memes, and the Quarantine. The Geocities-inspired preview was designed by yours truly!</p>
                         </div>
                     </div>
 
@@ -209,7 +209,7 @@
                             <img alt="The 'leave reviews' page of the TMB app." src="img/tmb.jpg">
                         </div>
                         <div>
-                            <img alt="NAR's front page." src="img/nar.jpg">
+                            <img alt="NAR Quaranzine Teaser." src="img/quaranzine.png">
                         </div>
                     </div>
                 </div>
