updating resume, skills list

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="subheading mb-5">Design Enthusiast · STE<span class="text-primary">A</span>M Fanatic · JS Experimenter ·
                         <a href="mailto:jaredbtlr@gatech.edu">jaredbtlr@gatech.edu</a>
                     </div>
-                    <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! I  f you're interested in recruiting me for the Summer of 2021, read on to learn a little bit more about my skills and interests!</p>
+                    <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! <b>I'm currently looking for a full-time position starting in the Summer of 2022, so read on to learn a little bit more about my skills and interests!</b></p>
 
                     <div class="social-icons">
                         <a class="icontrans" href="https://www.linkedin.com/in/jbtlr/">
@@ -77,7 +77,7 @@
                         <a class="icontrans" href="mailto:jaredbtlr@gatech.edu">
                             <i class="fas fa-envelope fa-lg"></i>
                         </a>
-                        <a class="icontrans" href="files/ResumeSM20.docx">
+                        <a class="icontrans" href="files/ResumeSM21.docx">
                             <i class="fas fa-file-invoice fa-lg"></i>
                         </a>
                     </div>
@@ -127,6 +127,9 @@
                         <li class="list-inline-item">
                             <i class="fab fa-java"></i>
                         </li>
+                        <li class="list-inline-item">
+                            <i class="fas fa-copyright"></i>
+                        </li>
                         <!--<li class="list-inline-item">
                             <i class="fab fa-google-drive"></i>
                         </li>-->
@@ -155,9 +158,12 @@
                         <li class="list-inline-item">
                             <i class="fab fa-windows"></i>
                         </li>
+                        <li class="list-inline-item">
+                            <i class="fab fa-android"></i>
+                        </li>
                     </ul>
 
-                    <div class="subheading mb-3"><a href="files/ResumeSM20.docx">Full Resume</a></div>
+                    <div class="subheading mb-3"><a href="files/ResumeSM21.docx">Full Resume</a></div>
 
                 </div>
             </section>
