--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a class="icontrans" href="mailto:jaredbtlr@gatech.edu">
                             <i class="fas fa-envelope fa-lg"></i>
                         </a>
-                        <a class="icontrans" href="files/ResumeSM21.docx">
+                        <a class="icontrans" href="files/ResumeF21.docx">
                             <i class="fas fa-file-invoice fa-lg"></i>
                         </a>
                     </div>
@@ -163,7 +163,7 @@
                         </li>
                     </ul>
 
-                    <div class="subheading mb-3"><a href="files/ResumeSM21.docx">Full Resume</a></div>
+                    <div class="subheading mb-3"><a href="files/ResumeF21.docx">Full Resume</a></div>
 
                 </div>
             </section>
