updating resume to F22 and removing GT email

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
                         <a class="icontrans" href="https://github.com/chromeoverload">
                             <i class="fab fa-github fa-lg"></i>
                         </a>
-                        <a class="icontrans" href="mailto:jaredbtlr@gatech.edu">
+                        <a class="icontrans" href="mailto:jaredbtlrjob@gmail.com">
                             <i class="fas fa-envelope fa-lg"></i>
                         </a>
-                        <a class="icontrans" href="files/ResumeF21.docx">
+                        <a class="icontrans" href="files/ResumeF22.docx">
                             <i class="fas fa-file-invoice fa-lg"></i>
                         </a>
                     </div>
