adding new email to top headline

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <span class="text-primary">Butler</span>
                     </h1>
                     <div class="subheading mb-5">Design Enthusiast · STE<span class="text-primary">A</span>M Fanatic · JS Experimenter ·
-                        <a href="mailto:jaredbtlr@gatech.edu">jaredbtlr@gatech.edu</a>
+                        <a href="mailto:jaredbtlrjob@gmail.com">jaredbtlrjob@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Hi there! I'm a Computer Science major at Georgia Tech with concentrations in People and Media. I have a passion for procedural generation, design, and journalism in digital media, so I made this little website to talk about myself and those passions! <b>I'm currently looking for a full-time position starting in the Summer of 2022, so read on to learn a little bit more about my skills and interests!</b></p>
 
